--- a/web/index.html
+++ b/web/index.html
@@ -4,48 +4,44 @@
     <meta charset="UTF-8">
     <title>个人通讯录系统</title>
     <style>
-        /* 设置页面背景和居中布局 */
         body {
             margin: 0;
             padding: 0;
             height: 100vh;
             display: flex;
-            justify-content: center; /* 水平居中 */
-            align-items: center;     /* 垂直居中 */
-            background-color: #f0f8ff; /* 背景颜色 */
+            justify-content: center;
+            align-items: center;
+            background-color: #f0f8ff;
             font-family: Arial, sans-serif;
         }
 
-        /* 容器样式 */
         .container {
             text-align: center;
-            background-color: #fff; /* 背景为白色 */
+            background-color: #fff;
             padding: 40px;
-            border-radius: 10px; /* 圆角 */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 阴影效果 */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 400px;
         }
 
-        /* 标题样式 */
         h2 {
             color: #333;
             margin-bottom: 20px;
         }
 
-        /* 链接按钮样式 */
         a {
             display: inline-block;
             margin: 10px;
             padding: 10px 20px;
-            background-color: #4CAF50; /* 按钮背景色 */
-            color: white; /* 按钮文字颜色 */
+            background-color: #4CAF50;
+            color: white;
             text-decoration: none;
-            border-radius: 5px; /* 圆角 */
-            transition: background-color 0.3s ease; /* 鼠标悬停时的平滑过渡效果 */
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
 
         a:hover {
-            background-color: #45a049; /* 鼠标悬停时按钮颜色变化 */
+            background-color: #45a049;
         }
 
 
